<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFirstApp</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_save">SaveTest</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="saved_high_score">SaveHighScore</string>

    <integer name="saved_high_score_default">0</integer>

    <string name="take_photo_btn_label">TakePhoto</string>
    <string name="take_video_btn_label">TakeVideo</string>
    <string name="title_activity_ttsclock">TTSClockActivity</string>
    <string name="text_to_voice_btn_label">TextToVoice</string>
    <string name="timer_clock_btn_label_start">Start</string>
    <string name="timer_clock_btn_label_stop">Stop</string>
    <string name="pause_clock_btn_label_pause">Pause</string>
    <string name="pause_clock_btn_label_restart">Restart</string>
    <string name="voice_to_text_btn_label_start">VoiceToText</string>
    <string name="voice_to_text_btn_label_stop">Stop</string>
    <string name="title_activity_min_open_gl">MinOpenGL</string>
    <string name="title_activity_tencent_demo">TencentDemo</string>

</resources>
