<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.windfree.firstapp.TTSClockActivity" >

    <EditText
        android:id="@+id/input_tts_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/text_to_voice_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_tts_text"
        android:layout_below="@+id/input_tts_text"
        android:text="@string/text_to_voice_btn_label" />

    <TextView
        android:id="@+id/remain_time_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_to_voice_btn"
        android:layout_alignRight="@+id/input_tts_text"
        android:layout_below="@+id/text_to_voice_btn"
        android:text="" />

    <EditText
        android:id="@+id/input_total_time_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/remain_time_txt"
        android:layout_below="@+id/remain_time_txt"
        android:layout_marginTop="16dp"
        android:ems="10" />

    <Button
        android:id="@+id/timer_clock_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_total_time_txt"
        android:layout_below="@+id/input_total_time_txt"
        android:text="@string/timer_clock_btn_label_start" />

    <Button
        android:id="@+id/pause_clock_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/text_to_voice_btn"
        android:layout_below="@+id/input_total_time_txt"
        android:text="@string/pause_clock_btn_label_pause" />

</RelativeLayout>